# inferno

./: .flake8  .gitignore  README.md  pyproject.toml  ruff.toml
.junie/epics/closed/: EPIC.cabling.implement-cabling-calculation.md
.junie/epics/open/: EPIC.cabling.qa-hardening.md
.junie/scripts/: epic-audit-2.sh
.junie/tasks/: guidelines.md
.junie/tasks/closed/: TASK.cabling.calculation.md  TASK.cabling.cross-validation.md  TASK.cabling.loader.md  TASK.cabling.policy-edgecases.md  TASK.cabling.validation.md
.junie/tasks/open/: TASK.cabling.cli-smoketests.md  TASK.cabling.definition-of-done-check.md  TASK.cabling.geometry-stress.md  TASK.cabling.intentional-corruption.md  TASK.cabling.oversubscription-stress.md  TASK.cabling.redundancy-stress.md  TASK.cabling.roundtrip-bom.md
docs/: arch-audit.md  arch-gpu-scoring-inferno.md
doctrine/: roadmap.md  site.yaml
doctrine/compute/: README.md
doctrine/contracting/: README.md
doctrine/delivery/: README.md
doctrine/deployment/: bringup.md
doctrine/hvac/: README.md  cooling-tools.md  cooling_options.yaml
doctrine/naming/: README.md  circles.yaml  nodes.yaml  racks.yaml
doctrine/network/: README.md  cabling-policy.yaml  spine.yaml  topology.yaml  tors.yaml
doctrine/power/: README.md  closet-power-checklist.md  feeds.yaml  pdu-candidates.md  pdu.yaml  power_research.md  rack-power-budget.md  rack-power-budget.yaml  ups-pdu.md  ups.yaml
doctrine/procurement/: README.md  ubixsurplus-shortlist.md
inferno-viz/: package-lock.json  package.json
scrape/: listingsscrape.js  unixsurplus.json  unixsurplus.md
(+2 files in other folders)
